# SQAI_handson

./: .gitignore  README.md  pyproject.toml  pyproject.toml~
SQAI_modules/: calc_pec.py
SQAI_modules/misc_utils/: README.md  __init__.py~  class_memory_report.py  class_memory_report.py~  file_utilities.py  givens_utilities.py  givens_utilities.py~  grid_utilities.py  integrals_handler.py  laser_field.py  matrix_utilities.py  matrix_utilities.py~  mo_viewer.py  mo_viewer.py~  pennylane_utilities.py  prop_etdrk2.py  prop_midpoint.py  prop_orbitals.py  prop_orbitals_midpoint.py  prop_wrapper.py  propagator.py  propagator_midpoint.py  propagator_old.py  pyproject.toml  pyscf_tools.py  pyscf_tools.py~  qiskit_utilities.py  richardson.py  richardson.py~
SQAI_modules/ormas_tools/: __init__.py  bitstring128.py  bitstring256.py  doci.py  doci_jit.py  ormas1.py  ormas1_jit.py  ormas2.py  ormas2_jit.py  rasci.py
SQAI_notebooks/: 03_H6_RASCI.ipynb  03_H6_pec.ipynb  1_H2_PySCF.ipynb  2_H6_PySCF.ipynb  3_H2_FCI.ipynb  3_H6_FCI.ipynb  4_H4_FCI.ipynb  4_H6_RASCI.ipynb  5_H6_FCI.ipynb  6_H6_RASCI.ipynb
