[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sqai-handson"
version = "0.1.0"
description = "SQAI quantum chemistry hands-on tutorial"
requires-python = ">=3.10"
dependencies = [
    "numba",
    "numpy",
    "scipy",
    "pyscf",
    "py3Dmol",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["SQAI_modules*"]
